--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/html_modals/registration_modal.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/html_modals/registration_modal.html
@@ -1,31 +1,38 @@
 {% extends 'benutzerSicht/index_base.html' %}
 {% block REGISTRATION_FORM %}
 {% load crispy_forms_tags %}
+
 <!-- REGISTRATION FORM -->
-    <div style="width: 40%" class="mx-auto">
+<div class="registration_layer_outer container w-25 rounded">
+    <div class="mx-auto p-2">
         <h3 class="text-light halder-title ms-2">Registrierung</h3>
-        <form method="post" class="form-group container">
+        <hr class="bg-light">
+        <form method="post" class="form-group container ">
+
             <!-- NAME -->
             {% csrf_token %}
             {% for field in regForm %}
-                <div class="text-light mt-1">
-                    {{ field.label_tag }}
-                    
+    
+                <div class="text-light mt-2">
+                    {{ field | as_crispy_field }}
                 </div>
-                {{ field | as_crispy_field }}
+                
             {% endfor %}
             {% if regForm.errors %}
+    
                 <div class="row text-light">
-                {% for field_with_error,error_messages in regForm.errors.items %}
-                    <div class="alert alert-danger">{{field_with_error}}  {{error_messages}}</div>
-                {% endfor %}
+                    {% for field_with_error,error_messages in regForm.errors.items %}
+                        <div class="alert alert-danger">{{field_with_error}} {{error_messages}}</div>
+                    {% endfor %}
                 </div>
+    
             {% endif %}
-            <div >
-                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Schließen</button>
+            <div class="mt-2 mb-3">
+                <a class="btn btn-outline-danger" href="{% url 'home' %}">Zurück</a>
                 <button type="submit" class="btn btn-outline-light" name="registration" id="registration">Registrieren</button>
             </div>
         </form>
     </div>
+</div>
     
 {% endblock  %}
