--- a/Doner_Laden/static/benutzerSicht/style.css
+++ b/Doner_Laden/static/benutzerSicht/style.css
@@ -15,6 +15,11 @@
     font-weight: bold;
 }
 
+/* Registration classes */
+.registration_layer_outer {
+    background-color: #2d2f31;
+}
+
 /* FOOT INFORMATION */
 .foot-info {
     background-color: #2d2f31;
