--- a/Doner_Laden/static/benutzerSicht/style.css
+++ b/Doner_Laden/static/benutzerSicht/style.css
@@ -16,7 +16,7 @@
 }
 
 /* Registration classes */
-.registration_layer_outer {
+.registration_layer_outer, .login_layer_outer {
     background-color: #2d2f31;
 }
 
