--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/footer.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!-- FOOTER -->
 <footer class="our-footer w-100 mx-auto">
-    <hr class="bg-light">
+    <hr class="bg-light mt-1">
     <div class="row">
         <h5 class = "text-light text-center text-capitalize halder-title h5">HALDER'S KEBAB</h5>
     </div>
