--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/index_base.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/index_base.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{% static 'benutzerSicht/bootstrap/css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'benutzerSicht/style.css' %}">
     </head>
-    <body class="bg-dark">
+    <body class="bg-dark pb-3">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://www.google.com/search?q=browser&sxsrf=ALeKk03_Nx5KbfYxAQ538cbC884JnFWs9Q%3A1616291847996&source=hp&ei=B6hWYKbJOo74U4CZlDA&iflsig=AINFCbYAAAAAYFa2F5kOabQVE2FBO5S9zGkZWZnB-TJB&oq=browser&gs_lcp=Cgdnd3Mtd2l6EAMyBQgAEMsBMgUIABDLATIFCAAQywEyBQgAEMsBMgUILhDLATIFCAAQywEyBQgAEMsBMgUIABDLATIFCAAQywEyBQgAEMsBOgQIIxAnOgIIADoICC4QxwEQrwE6AgguOggILhDHARCjAlD-BljEEWDKEmgAcAB4AYAB3gGIAfMGkgEFMS40LjGYAQCgAQGqAQdnd3Mtd2l6&sclient=gws-wiz&ved=0ahUKEwjm6M2rpMDvAhUO_BQKHYAMBQYQ4dUDCAg&uact=5">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
