--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/navbar.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/navbar.html
@@ -1,13 +1,13 @@
 
 {% load static %}
 <!-- NAVBAR-->
-<nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand text-light ms-5" href="#">
             <img src="{% static 'benutzerSicht/images/logo_images/logo3.png' %}" alt="Halder's Kebab"><p class="h3 d-inline halder-title align-middle"> HALDER'S KEBAB</p></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
         <ul class="nav justify-content-end mt-2">
             <li class="nav item">
                 <div class="dropdown show">
