--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/html_modals/login_modal.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/html_modals/login_modal.html
@@ -18,7 +18,7 @@
         
         <div class="mt-3 mb-3">
             <a class="btn btn-outline-danger" href="{% url 'home' %}">Zurück</a>
-            <a class="btn btn-outline-light" href="">Registrieren</a>
+            <a class="btn btn-outline-light" href="{% url 'registration' %}">Registrieren</a>
             <button type="submit" class="btn btn-outline-light" name="login">Anmelden</button>
         </div>
         </form>
