--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/index_base.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/index_base.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{% static 'benutzerSicht/bootstrap/css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'benutzerSicht/style.css' %}">
     </head>
-    <body class="bg-dark pb-3">
+    <body class="bg-dark">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="https://www.google.com/search?q=browser&sxsrf=ALeKk03_Nx5KbfYxAQ538cbC884JnFWs9Q%3A1616291847996&source=hp&ei=B6hWYKbJOo74U4CZlDA&iflsig=AINFCbYAAAAAYFa2F5kOabQVE2FBO5S9zGkZWZnB-TJB&oq=browser&gs_lcp=Cgdnd3Mtd2l6EAMyBQgAEMsBMgUIABDLATIFCAAQywEyBQgAEMsBMgUILhDLATIFCAAQywEyBQgAEMsBMgUIABDLATIFCAAQywEyBQgAEMsBOgQIIxAnOgIIADoICC4QxwEQrwE6AgguOggILhDHARCjAlD-BljEEWDKEmgAcAB4AYAB3gGIAfMGkgEFMS40LjGYAQCgAQGqAQdnd3Mtd2l6&sclient=gws-wiz&ved=0ahUKEwjm6M2rpMDvAhUO_BQKHYAMBQYQ4dUDCAg&uact=5">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -40,21 +40,8 @@
         <!-- ORDER SUMMARY MODAL -->
         {% include "benutzerSicht/html_modals/order_summary_modal.html" %}
 
-        <!-- PRODUCT VIEW CARDS -->
-        {% block PRODUCT_VIEW_CARDS %}{% endblock PRODUCT_VIEW_CARDS %}
-        {% comment %} {% include "benutzerSicht/product_view_cards.html" %} {% endcomment %}
-
-        {% block HOME %}{% endblock HOME %}
-        <!-- PRODUCT LIST PRICE -->
-        {% block PRODUCT_LIST %}{% endblock PRODUCT_LIST %}
-        {% comment %} {% include "benutzerSicht/product_list_price.html" %} {% endcomment %}
-
-        <!-- FOR US -->
-        {% block FOR_US %}{% endblock FOR_US %}
-        {% comment %} {% include "benutzerSicht/for_us.html" %} {% endcomment %}
-
-        <!-- FOOTER -->
-        {% comment %}{% include "benutzerSicht/footer.html" %}{% endcomment %}
+        <!-- INDEX -->
+        {% block INDEX %}{% endblock INDEX %}
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
