--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/navbar.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/navbar.html
@@ -3,7 +3,7 @@
 <!-- NAVBAR-->
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand text-light ms-5" href="#">
+        <a class="navbar-brand text-light ms-5" href="{% url 'home' %}">
             <img src="{% static 'benutzerSicht/images/logo_images/logo3.png' %}" alt="Halder's Kebab"><p class="h3 d-inline halder-title align-middle"> HALDER'S KEBAB</p></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
                 </a>
             </li>
             <li class="nav item">
-                <a class="btn btn-outline-light halder-title h5 me-5" data-toggle="modal" data-target="#loginModal" href="{% url 'login' %}">Anmelden</a>
+                <a class="btn btn-outline-light halder-title h5 me-5" href="{% url 'login' %}">Anmelden</a>
             </li>
         </ul>
     </div>
