--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/footer.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/footer.html
@@ -15,7 +15,7 @@
             <a class = "nav-link text-light text-center halder-title h5" href="https://de.wikipedia.org/wiki/Allgemeine_Gesch%C3%A4ftsbedingungen_(Deutschland)">AGB</a>
         </div>
         <div class="col">
-            <a class = "nav-link text-light text-center halder-title h5" href="#for_us">ÜBER UNS</a>
+            <a class = "nav-link text-light text-center halder-title h5" href="{% url 'home' %}#for_us">ÜBER UNS</a>
         </div>
         <div class="col">
             <a class = "nav-link text-light text-center halder-title h5" href="#" data-dismiss="modal" data-toggle="modal" data-target="#contactModal">KONTAKT</a>
