--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/login.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/login.html
@@ -1,6 +1,7 @@
 {% extends 'benutzerSicht/index_base.html' %}
 {% block TITLE %}Anmelden{% endblock TITLE %}
 {% block LOGIN_FORM %}
+{% load crispy_forms_tags %}
 <!-- LOGIN FORM -->
 <div class="login_layer_outer container w-25 rounded">
     <div class="mx-auto p-2">
@@ -9,25 +10,27 @@
         <form method="post" class="form-group container">
             {% csrf_token %}
             {% for field in loginForm %}
+
                 <div class="text-light mt-1" >
-                    {{ field.label_tag }} 
+                    {{ field | as_crispy_field}}  
                 </div>
-                {{ field }}                        
+                                   
             {% endfor %}
+            
             {% if loginForm.errors %}
     
-                <div class="row text-light">
-                    {% for field_with_error,error_messages in loginForm.errors.items %}
-                        <div class="alert alert-danger">{{field_with_error}} {{error_messages}}</div>
-                    {% endfor %}
-                </div>
+            <div class="row text-light">
+                {% for field_with_error,error_messages in loginForm.errors.items %}
+                    <div class="alert alert-danger">{{field_with_error}} {{error_messages}}</div>
+                {% endfor %}
+            </div>
     
             {% endif %}
-        <div class="mt-3 mb-3">
-            <a class="btn btn-outline-danger" href="{% url 'home' %}">Zurück</a>
-            <a class="btn btn-outline-light" href="{% url 'registration' %}">Registrieren</a>
-            <button type="submit" class="btn btn-outline-light" name="login">Anmelden</button>
-        </div>
+            <div class="mt-3 mb-3">
+                <a class="btn btn-outline-danger" href="{% url 'home' %}">Zurück</a>
+                <a class="btn btn-outline-light" href="{% url 'registration' %}">Registrieren</a>
+                <button type="submit" class="btn btn-outline-light" name="login">Anmelden</button>
+            </div>
         </form>
     </div>
 </div>
