--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/navbar.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/navbar.html
@@ -3,19 +3,20 @@
 <!-- NAVBAR-->
 <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand text-light ms-5" href="#">
+        <a class="navbar-brand text-light ms-5" href="{% url 'home' %}">
             <img src="{% static 'benutzerSicht/images/logo_images/logo3.png' %}" alt="Halder's Kebab"><p class="h3 d-inline halder-title align-middle"> HALDER'S KEBAB</p></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <ul class="nav justify-content-end mt-2">
+            <!--
             <li class="nav item">
                 <div class="dropdown show">
                     <a class="nav-link link-light dropdown-toggle halder-title h5" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Produkte
                     </a>
                   
-                    <!-- DROPDOWN MENU ITEMS -->
+                     DROPDOWN MENU ITEMS
                     <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuLink">
                       <a class="dropdown-item bg-dark text-light halder-title" href="#products">Döner</a>
                       <a class="dropdown-item bg-dark text-light halder-title" href="#products">Pizza</a>
@@ -26,8 +27,11 @@
                     </div>
                 </div>
             </li>
+            -->
             <li class="nav item">
-                <a class="nav-link text-light halder-title h5" href="#for_us">Über uns</a>
+                <!--<a class="nav-link text-light halder-title h5" href="#for_us">Über uns</a>-->
+                
+                <a class="nav-link text-light halder-title h5" href="{% url 'home' %}#for_us">Über uns</a>
             </li>
             <li class="nav item">
                 <a class="nav-link text-light halder-title h5" href="#" data-dismiss="modal" data-toggle="modal" data-target="#contactModal">Kontakt</a>
