Contact me -> done

--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/html_modals/contact_modal.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/html_modals/contact_modal.html
@@ -1,27 +1,39 @@
+{% load crispy_forms_tags %}
 <!-- CONTACT MODAL -->
 <div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content bg-dark">
             <div class="modal-header">
-                <h3 class="modal-title text-light halder-title" id="contactModalLabel">Nachricht senden</h3>
+                <h3 class="modal-title text-light halder-title" id="contactModalLabel">Send us message</h3>
             </div>
             <div class="modal-body">
                 <!-- CONTACT FORM -->
-                <form>
-                    <div class="form-group mt-2">
-                        <label for="emailInput" class="text-light">Email</label>
-                        <input type="email" class="form-control" id="emailInput" aria-describedby="emailHelp" placeholder="Email">
+                <form method="POST">
+                    
+                    {% csrf_token %}
+                    {% for field in ContactMeForm %}
+
+                        <div class="form-group mt-2 text-light">
+                            {{ field | as_crispy_field}}
+                        </div>
+                    
+                    {% endfor %}
+
+                    {% if ContactMeForm.errors %}
+
+                    <div class="row text-light">
+                        {% for field_with_error, error_messages in ContactMeForm.errors.items %}
+                            <div class="alert alert-danger">{{field_with_error}} {{error_messages}}</div>
+                        {% endfor %}
                     </div>
-                    <div class="form-group mt-2">
-                        <label for="messageInput" class="text-light">Nachricht</label>
-                        <textarea class="form-control" id="messageTextArea" placeholder="Nachricht" cols="30" rows="5"></textarea>
+
+                    {% endif %}
+
+                    <div class="modal-footer mt-2">
+                        <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-outline-light" name="contact_me_form">Send</button>
                     </div>
-                        <!--<button type="submit" class="btn btn-primary">Submit</button>-->
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Schließen</button>
-                <button type="submit" class="btn btn-outline-light" data-dismiss="modal" data-toggle="modal" data-target="#contactModal">Senden</button>
             </div>
         </div>
     </div>
