--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/product_list_price.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/product_list_price.html
@@ -1,5 +1,5 @@
 <!-- PRODUCT LIST PRICE -->
-<div class="container mt-5 mb-5" id="products">
+<div class="container mt-5 mb-5" id="price_card">
     <h3 class="text-center text-light text-decoration-inline halder-title">Preisliste</h3>
     <hr class="bg-light"/>
     <div class="row">
