--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/html_modals/order_modal.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/html_modals/order_modal.html
@@ -1,4 +1,5 @@
 <!-- ORDER MODAL -->
+{% csrf_token %}
 <div class="modal fade" id="orderModal" tabindex="-1" role="dialog" aria-labelledby="orderModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content bg-dark">
@@ -8,8 +9,13 @@
             <div class="modal-body">
                 <!-- ORDER FORM -->
                 <form>
+                    
+                    
                     <div class="form-group mt-2">
-                        <label for="QuantityInput" class="text-light">Menge eingeben</label>
+                    {% for  prdCounter in  prdCounterForm  %}
+                        <div  class="text-light">{{ prdCounter }}</div>
+                    {% endfor %}
+                        <label for="QuantityInput" class="text-light">Anzahl</label>
                         <input type="number" class="form-control" id="QuantityInput" aria-describedby="QuantityInputHelp" placeholder="1" min="1" max="100">
                     </div>
                     <div class="form-group mt-2">
