--- a/Doner_Laden/BenutzerSicht/templates/benutzerSicht/product_list_price.html
+++ b/Doner_Laden/BenutzerSicht/templates/benutzerSicht/product_list_price.html
@@ -6,185 +6,68 @@
         <div class="col">
         {% csrf_token %}
             <div class="price-menu rounded pb-2">
-                <h2 class="text-center text-light mt-3 pt-3 halder-title">KEBAB</h2>
-                <ul class="list-group px-2 price-menu-ul text-light">
+            {% for product in products %}
+                {% if product.catagory.name == 'Kebab' %}
+                    {% if forloop.counter == 1 %}
+                        <h2 class="text-center text-light mt-3 pt-3 halder-title">{{product.catagory.name}}</h2>
+                    {% endif %}
+                    <ul class="list-group px-2 price-menu-ul text-light">
                     <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
                         <div>
-                            <span class="text-light h5">{{ doner.name }}</span>
+                            <span class="text-light h5">{{ product.name }}</span>
                         </div>
                         <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">{{ doner.price }} </span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
+                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">{{ product.price }} Euro</span>
+                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#" value="1">+</a>
                         </div>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">XXL Doener </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">29.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">XXL Doener </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">29.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">XXL Doener </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">29.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">XXL Doener </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">29.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">XXL Doener </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">29.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                </ul>
+                    </ul>
+                
+                {% endif %}
+            {% endfor %} 
             </div>
         </div>
         <div class="col">
             <div class="price-menu rounded pb-2">
-                <h2 class="text-center text-light mt-3 pt-3 halder-title">PIZZA</h2>
-                <ul class="list-group px-2 price-menu-ul text-light">
+            <h2 class="text-center text-light mt-3 pt-3 halder-title">PIZZA</h2>
+            <ul class="list-group px-2 price-menu-ul text-light">
+                {% for product in products %}
+                    {% if product.catagory.name == 'Pizza' %}
+                    {% comment %} {% if forloop.counter == 1 %}
+                        <h2 class="text-center text-light mt-3 pt-3 halder-title">{{product.catagory.name}}</h2>
+                    {% endif %} {% endcomment %}
+                    
                     <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
                         <div>
-                            <span class="text-light h5">Pizza Hawai </span>
+                            <span class="text-light h5">{{ product.name }}</span>
                         </div>
                         <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">19.99 Euro</span>
+                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">{{ product.price }} Euro</span>
                             <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
                         </div>
                     </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">Pizza Hawai </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">19.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">Pizza Hawai </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">19.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">Pizza Hawai </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">19.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">Pizza Hawai </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">19.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">Pizza Hawai </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">19.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                </ul>
+                    {% endif %}
+                {% endfor %} 
+            </ul>
             </div>
         </div>
         <div class="col">
             <div class="price-menu rounded pb-2">
-                <h2 class="text-center text-light mt-3 pt-3 halder-title">BEILAGEN</h2>
+                <h2 class="text-center text-light mt-3 pt-3 halder-title">DRINKS</h2>
                 <ul class="list-group px-2 price-menu-ul text-light">
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">Coca-Cola </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">9.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light text-light h5">Coca-Cola </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">9.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">Coca-Cola </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">9.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light h5">Coca-Cola </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">9.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light halder-title h5">Coca-Cola </span>
-                            
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">9.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
-                        <div>
-                            <span class="text-light halder-title h5">Coca-Cola </span>
-                        </div>
-                        <div class="d-inline">
-                            <span class="halder-price h5 p-1 pe-2 rounded text-danger">9.99 Euro</span>
-                            <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
-                        </div>
-                    </li>
+                    {% for product in products %}
+                        {% if product.catagory.name == 'Drinks' %}
+                        <li class="list-group-item d-flex justify-content-between align-items-center mt-2 rounded">
+                            <div>
+                                <span class="text-light h5">{{ product.name }}</span>
+                            </div>
+                            <div class="d-inline">
+                                <span class="halder-price h5 p-1 pe-2 rounded text-danger">{{ product.price }} Euro</span>
+                                <a class="btn btn-outline-light" role="button" data-dismiss="modal" data-toggle="modal" data-target="#orderModal" href="#">+</a>
+                            </div>
+                        </li>
+                        {% endif %}   
+                    {% endfor %} 
                 </ul>
             </div>
         </div>
